# urayf-portal

./: .env.local.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  schema-clean.sql
docs/: PLAYBOOK_v4.md
engine/: .gitignore  CLAUDE.md  README.md  pyproject.toml
engine/collector/: cash_summary.py  dev_run.py  fragments.py  parsing.py  selectors.py  session.py
engine/docs/: PLAYBOOK_v5.md
engine/schema/: report_payload.py
engine/tests/: test_smoke.py
engine/tests/collector/: test_parsing.py
public/: report-sample.html
public/demo-reports/: daily-report.html  monthly-report.html  weekly-report.html
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/auth/callback/: route.ts
src/app/button-preview/: page.tsx
src/app/card-preview/: page.tsx
src/app/form-preview/: page.tsx
src/app/pill-icon-preview/: page.tsx
src/app/portal/: layout.tsx  page.tsx
src/app/portal/(app)/: error.css  error.tsx  layout.tsx
src/app/portal/(app)/[slug]/: loading.tsx  page.tsx  store.css
src/app/portal/(app)/admin/: admin.css  page.tsx
src/app/portal/login/: page.tsx
src/app/privacy/: page.tsx  placeholder.css
src/app/shell-preview/: page.tsx
src/app/terms/: page.tsx
src/components/home/: Homepage.tsx  ReportSample.tsx  home.css
src/components/layout/: AppShell.tsx  ProfileMenu.tsx  Sidebar.tsx  Wordmark.tsx  shell.css  sidebar.css  wordmark.css
src/components/portal/: AddStoreForm.tsx  LoginForm.tsx  LoginTransition.tsx  ReportTypeBadge.tsx  ReportViewer.tsx  Sidebar.tsx  SignOutButton.tsx  UploadReportForm.tsx  WelcomeModal.tsx  login-transition.css  viewer.css  welcome.css
src/components/ui/: Button.tsx  Card.tsx  Icon.tsx  Ledger.tsx  Pill.tsx  Skeleton.tsx  TextField.tsx  Toggle.tsx  button.css  card.css  field.css  ledger.css  pill.css  skeleton.css  toast.css  toast.tsx  toggle.css
src/lib/: admin-actions.ts  auth.ts  config.ts  data.ts  preferences.ts  report-payload.ts  sample-data.ts  types.ts
src/lib/supabase/: client.ts  middleware.ts  server.ts
src/styles/: tokens.css
supabase/: schema.sql
supabase/migrations/: 001_engine_extensions.sql
(+18 files in other folders)
