[project]
name = "urayf-engine"
version = "0.1.0"
description = "The urayf Engine — implements Playbook v4 for franchisee report generation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Uraif Malik", email = "uraif@urayf.com" },
]
license = { text = "Proprietary" }

dependencies = [
    "playwright>=1.60.0",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

# ----------------------------------------------------------------------------
# ruff: linter + formatter. One tool, fast.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
# Sensible default rule set without being pedantic. We can tighten later.
select = [
    "E", "F", "W",      # pycodestyle + pyflakes (the basics)
    "I",                # import sorting
    "B",                # bugbear (catches common bugs)
    "UP",               # pyupgrade (modernize syntax)
    "SIM",              # simplify
    "RUF",              # ruff-specific rules
]
ignore = [
    "E501",             # line too long — formatter handles this
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",                  # show short summary for all non-passing
    "--strict-markers",     # mark typos in @pytest.mark.* are errors
    "--strict-config",      # config typos are errors
]

# ----------------------------------------------------------------------------
# uv build backend
# ----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schema", "calculator"]
